testdata/baselines/reference/submodule/conformance/typedefCrossModule3.errors.txt
mod2.js(3,4): error TS2339: Property 'Foo' does not exist on type '{}'.


==== mod2.js (1 errors) ====
    /** @typedef {number} Foo */
    const ns = {};
    ns.Foo = class {}
       ~~~
!!! error TS2339: Property 'Foo' does not exist on type '{}'.
    module.exports = ns;
    
    